src/cypd.css
/* ... */
.cypd-table-container .cypd-table {
    display: table;
    border-collapse: collapse;
    width: 100%;
}


/* .cypd-table-container .table-wrapper:hover {
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.212), 0px 0px 4px rgba(0, 0, 0, 0.486);
} */

.cypd-table-container .cypd-table .row {
    height: 30px;
    line-height: 1.5;
    display: table-row;
    transition: background-color 100ms ease-in-out;
}

.cypd-table-container .cypd-table .row.header {
    color: white;
    font-size: 20px;
    font-weight: bolder;
    background-color: var(--default-cyp-blue-active);
}


/* .cypd-table-container .cypd-table .row.header:hover {
    background-color: var(--default-cyp-blue-opa-medium);
} */

.cypd-table-container .cypd-table .row.normal {
    border-bottom: 1px solid var(--default-cyp-blue-opa-light);
    color: rgb(109, 108, 108);
}

.cypd-table-container .cypd-table.nextpage .row.normal {
    animation: NextPage 300ms cubic-bezier(1, 0, 0, 1);
}

.cypd-table-container .cypd-table.prevpage .row.normal {
    animation: PrevPage 300ms cubic-bezier(1, 0, 0, 1);
}


/* .cypd-table-container .cypd-table .row.normal:hover {
    background-color: var(--default-cyp-blue-opa-light);
} */

.cypd-table-container .cypd-table .cell {
    position: relative;
    padding: 5px 10px 5px 10px;
    display: table-cell;
    vertical-align: middle;
    line-height: 100%;
    text-align: center;
    transition: transform 100ms ease-in-out;
}

.cypd-table-container .footer {
    box-sizing: border-box;
    position: relative;
    display: flex;
    justify-content: flex-start;
    flex-direction: row-reverse;
    align-items: center;
    padding: 10px 20px 10px 20px;
    height: 60px;
    line-height: 60px;
    width: 100%;
}

.cypd-table-container .footer .cypd-span,
.cypd-table-container .footer .cypd-input,
.cypd-table-container .footer .cypd-button {
    float: right;
}


/* .cypd-table-container .cypd-table .cell .cypd-icon-wrapper {
    position: relative;
    display: inline-block;
    transform: translateY(3px);
} */

.cypd-table-container .cypd-icon:not([class*='fc-']) * {
    stroke: rgb(109, 108, 108);
}

.cypd-table-container .cypd-tooltip-wrapper {
    display: inline-flex;
}

@keyframes NextPage {
    0% {
        opacity: 0;
        transform: translate(20px);
    }
    20% {
        opacity: 0;
    }
    100% {
        opacity: 1;
        transform: translate(0);
    }
}

@keyframes PrevPage {
    0% {
        opacity: 0;
        transform: translate(-20px);
    }
    20% {
        opacity: 0;
    }
    100% {
        opacity: 1;
        transform: translate(0);
    }
}


/* cypd cypd-modal */

.cypd-modal-container {
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    user-select: text;
    z-index: 11;
}

.cypd-modal-container.active {
    opacity: 1;
    visibility: visible;
    transition: opacity var(--default-transition-duration) ease-in, visibility var(--default-transition-duration);
}

.cypd-modal-container.hide {
    opacity: 0;
    visibility: hidden;
    transition: opacity var(--default-transition-duration) ease-in, visibility 0ms ease-in var(--default-transition-duration);
}

.cypd-modal-container .cypd-modal-background {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.8);
    text-align: center;
    vertical-align: middle;
}

.cypd-modal-container .cypd-modal-background .cypd-modal {
    position: relative;
    background: white;
    display: inline-block;
    border-radius: 3px;
    min-width: 400px;
    padding: 10px;
    text-align: left;
}

.cypd-confirm-dialog-container {
    position: relative;
    z-index: 31;
}


/* 
.cypd-modal-container.active .cypd-modal-background .cypd-modal {
    animation: popIn 300ms;
}

.cypd-modal-container.hide .cypd-modal-background .cypd-modal {
    animation: popOut 300ms;
} */

.cypd-modal-container .cypd-modal-background .cypd-modal h3 {
    margin: 10px 20px 15px 20px;
    padding-left: 10px;
    padding-right: 10px;
    line-height: 30px;
    font-size: 18px;
    border-bottom: 1px solid rgba(40, 40, 40, 0.3);
}

.cypd-modal-container .cypd-modal-background .cypd-modal .content {
    margin: 0px 20px 15px 20px;
}

.cypd-modal-container .cypd-modal-background .cypd-modal svg.close-svg {
    position: absolute;
    top: 10px;
    right: 10px;
    height: 20px;
    width: 20px;
    cursor: pointer;
}

@keyframes popIn {
    0% {
        transform: scale(0.9);
        /* opacity: 0; */
    }
    100% {
        transform: scale(1);
        /* opacity: 1; */
    }
}

@keyframes popOut {
    0% {
        transform: scale(1);
    }
    100% {
        transform: scale(0);
    }
}


/* cypd href */

.cypd-href {
    color: var(--default-cyp-blue-hover);
    height: var(--default-small-height);
    line-height: var(--default-small-height);
    cursor: pointer;
}

.cypd-href:hover {
    color: var(--default-cyp-blue-light);
    text-decoration: underline;
}


/* cypd input */

.cypd-input {
    width: 60px;
    height: 32px;
    position: relative;
    padding-left: 10px;
    padding-right: 10px;
    text-align: left;
    border-radius: 5px;
    cursor: pointer;
    border: 1px solid var(--default-gray-color);
    letter-spacing: 1px;
    transition: border var(--default-transition-duration) ease-in-out, box-shadow var(--default-transition-duration) ease-in-out, background-color var(--default-transition-duration) ease-in-out;
}

.cypd-input::placeholder {
    color: var(--default-gray-color);
}

.cypd-input:hover {
    /* border: 1px solid var(---default-cyp-blue-hover); */
    border: 1px solid var(--default-cyp-blue-hover);
}

.cypd-input:focus {
    cursor: text;
    border: 1px solid var(--default-cyp-blue-active);
    box-shadow: 0px 0px 2px var(--default-cyp-blue-hover);
}
/* ... */

